--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "@pathcheck/cred-sdk": "^0.0.6",
+    "@pathcheck/dcc-sdk": "^0.0.17",
     "body-parser": "^1.19.0",
     "cross-fetch": "^3.1.4",
     "express": "^4.17.1"
